# icanScan

./: .gitignore  Crear_Acceso_Directo_En_Escritorio.bat  Iniciar_IcanScan_Como_App.bat  Iniciar_IcanScan_Linux_Mac.sh  PRIVACY_POLICY.md  README.md  backend_entry.py  icanscan_backend.spec  pyproject.toml
frontend/: package-lock.json  package.json
frontend/electron/: main.cjs  main.js  preload.cjs  preload.js
frontend/src/: App.jsx  index.css
frontend/src/components/: CustomModal.jsx  ExportBar.jsx  PageGrid.jsx  PdfCompressorView.jsx  PdfToolsView.jsx  PreviewStudioModal.jsx  ScannerControls.jsx  SortablePageCard.jsx
frontend/src/i18n/: LanguageContext.jsx  translations.js
src/icanscan/: __init__.py  image_processor.py  main.py  pdf_compressor.py  pdf_tools.py  scanner_wia.py
